# CIS6016

./: .gitignore  CMakeLists.txt  README.md  st20158067 CIS6016 Instructions.txt
src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp  GraphicsDriver.cpp  GraphicsDriver.h  InputManager.cpp  InputManager.h  NetworkManagerClient.cpp  NetworkManagerClient.h  PlayerClient.cpp  PlayerClient.h  RenderManager.cpp  RenderManager.h  ReplicationManagerClient.cpp  ReplicationManagerClient.h  RockClient.cpp  RockClient.h  SpriteComponent.cpp  SpriteComponent.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  WindowManager.cpp  WindowManager.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  InputAction.h  InputState.cpp  InputState.h  Move.cpp  Move.h  MoveList.cpp  MoveList.h  Player.cpp  Player.h  Rock.cpp  Rock.h  World.cpp  World.h
src/gtest/: ByteSwapTestHarness.cpp  ByteSwapTestHarness.h  CMakeLists.txt  GameObjectRegistryTestHarness.cpp  GameObjectRegistryTestHarness.h  GameObjectTestHarness.cpp  GameObjectTestHarness.h  InputStateTestHarness.cpp  InputStateTestHarness.h  MathTestHarness.cpp  MathTestHarness.h  MemoryBitStreamTestHarness.cpp  MemoryBitStreamTestHarness.h  MemoryStreamTestHarness.cpp  MemoryStreamTestHarness.h  MoveTestHarness.cpp  MoveTestHarness.h  PlayerTestHarness.cpp  PlayerTestHarness.h  RandomGenTestHarness.cpp  RandomGenTestHarness.h  SocketAddressFactoryTestHarness.cpp  SocketAddressFactoryTestHarness.h  SocketAddressTestHarness.cpp  SocketAddressTestHarness.h  SocketUtilTestHarness.cpp  SocketUtilTestHarness.h  TCPSocketTestHarness.cpp  TCPSocketTestHarness.h  TestObject.cpp  TestObject.h  UDPSocketTestHarness.cpp  UDPSocketTestHarness.h  Vector3TestHarness.cpp  Vector3TestHarness.h  WorldTestHarness.cpp  WorldTestHarness.h  gtest_main.cpp
src/maths/: BitMan.h  CMakeLists.txt  Colors.h  Maths.cpp  Maths.h  Quaternion.h  RandGen.cpp  RandGen.h  Vector3.cpp  Vector3.h
src/networking/: CMakeLists.txt  NetworkingCommon.h  SocketAddress.cpp  SocketAddress.h  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketUtil.cpp  SocketUtil.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
src/replication/: CMakeLists.txt  GameObjectRegistry.cpp  GameObjectRegistry.h  NetworkManager.cpp  NetworkManager.h  ReceivedPacket.cpp  ReceivedPacket.h  ReplicationCommand.h  Timing.cpp  Timing.h  WeightedTimedMovingAverage.h
src/serialisation/: ByteSwap.h  CMakeLists.txt  Fixed.h  InputMemoryBitStream.cpp  InputMemoryBitStream.h  InputMemoryStream.cpp  InputMemoryStream.h  LinkingContext.cpp  LinkingContext.h  OutputMemoryBitStream.cpp  OutputMemoryBitStream.h  OutputMemoryStream.cpp  OutputMemoryStream.h  SerialisationCommon.h
src/server/: CMakeLists.txt  ClientProxy.cpp  ClientProxy.h  NetworkManagerServer.cpp  NetworkManagerServer.h  PlayerServer.cpp  PlayerServer.h  ReplicationManagerServer.cpp  ReplicationManagerServer.h  RockServer.cpp  RockServer.h  Server.cpp  Server.h  ServerMain.cpp
src/strings/: CMakeLists.txt  StringUtils.cpp  StringUtils.h
